# lir

./: .gitignore  Cargo.toml  build.rs  flake.nix
src/: main.rs
src/cli/: command.rs
src/lights/: mod.rs
