[package]
name = "lir"
version = "0.0.1"
edition = "2021"
description = "A modern replacement for ls"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
clap = { version = "4.4.11", features = ["cargo"] }
pretty_env_logger = "0.5.0"

[build-dependencies]
clap = { version = "4.4.11", features = ["cargo"] }
clap_complete = "4"
clap_mangen = "0.2.14"
